--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
@@ -159,11 +159,11 @@ button:hover {
 </div>
 
 <!-- Suara -->
-<audio id="suaraTyping" src="../../suara/typing.mp3" preload="auto"></audio>
-<audio id="suaraNext" src="../../suara/next.mp3" preload="auto"></audio>
-<audio id="suaraUlangi" src="../../suara/ulangi.mp3" preload="auto"></audio>
-<audio id="suaraKlik" src="../../suara/mouse-clicks.mp3" preload="auto"></audio>
-<audio id="suaraPeringatan" src="../../suara/tada-234709.mp3" preload="auto"></audio>
+<audio id="suaraTyping" src="../../../../suara/typing.mp3" preload="auto"></audio>
+<audio id="suaraNext" src="../../../../suara/next.mp3" preload="auto"></audio>
+<audio id="suaraUlangi" src="../../../../suara/ulangi.mp3" preload="auto"></audio>
+<audio id="suaraKlik" src="../../../../suara/mouse-clicks.mp3" preload="auto"></audio>
+<audio id="suaraPeringatan" src="../../../../suara/tada-234709.mp3" preload="auto"></audio>
 
 <script>
 let soal = [
