--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html
@@ -140,11 +140,11 @@ button:hover {
 </div>
 
 <!-- Suara -->
-<audio id="suaraTyping" src="../../suara/typing.mp3"></audio>
-<audio id="suaraNext" src="../../suara/next.mp3"></audio>
-<audio id="suaraUlangi" src="../../suara/ulangi.mp3"></audio>
-<audio id="suaraKlik" src="../../suara/mouse-clicks.mp3"></audio>
-<audio id="suaraPeringatan" src="../../suara/tada-234709.mp3"></audio>
+<audio id="suaraTyping" src="../../../../suara/typing.mp3"></audio>
+<audio id="suaraNext" src="../../../../suara/next.mp3"></audio>
+<audio id="suaraUlangi" src="../../../../suara/ulangi.mp3"></audio>
+<audio id="suaraKlik" src="../../../../suara/mouse-clicks.mp3"></audio>
+<audio id="suaraPeringatan" src="../../../../suara/tada-234709.mp3"></audio>
 
 <script>
 let soal = [
@@ -282,3 +282,4 @@ function kirimKeGoogleForm(nilai){
 </script>
 </body>
 </html>
+
