--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -159,7 +159,7 @@
 </head>
 <body>
   <!-- Audio klik -->
-  <audio id="clickSound" src="suara/bubble-pop.mp3" preload="auto"></audio>
+  <audio id="clickSound" src="suara/blub.mp3" preload="auto"></audio>
 
   <div class="background-wrapper">
     <nav style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 0.5rem; padding: 1rem;">
@@ -173,8 +173,6 @@
         <a href="#galeri" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Galeri</a>
         <a href="kelas-5/kelas.html" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Kelas</a>
         <a href="#kontak" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Kontak</a>
-        
-        </div>
       </div>
     </nav>
 
@@ -186,8 +184,6 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const dropdown = document.querySelector(".dropdown");
-      const toggle = dropdown.querySelector(".dropdown-toggle");
       const clickSound = document.getElementById("clickSound");
 
       function playClickSound() {
@@ -195,26 +191,29 @@
         clickSound.play();
       }
 
-      // Tambahkan suara di semua tombol & link
+      // Tambahkan suara ke semua tombol & link
       document.querySelectorAll("a, button").forEach(el => {
         el.addEventListener("click", playClickSound);
       });
 
       // Dropdown mobile
-      if (window.innerWidth <= 768) {
-        toggle.addEventListener("click", function (e) {
-          e.preventDefault();
-          dropdown.classList.toggle("open");
-        });
+      const dropdown = document.querySelector(".dropdown");
+      if (dropdown) {
+        const toggle = dropdown.querySelector(".dropdown-toggle");
+        if (window.innerWidth <= 768 && toggle) {
+          toggle.addEventListener("click", function (e) {
+            e.preventDefault();
+            dropdown.classList.toggle("open");
+          });
 
-        document.addEventListener("click", function (e) {
-          if (!dropdown.contains(e.target)) {
-            dropdown.classList.remove("open");
-          }
-        });
+          document.addEventListener("click", function (e) {
+            if (!dropdown.contains(e.target)) {
+              dropdown.classList.remove("open");
+            }
+          });
+        }
       }
     });
   </script>
 </body>
 </html>
-
