--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -146,6 +146,7 @@
     <a href="#perjalanan-rumus" class="map-item"><span class="emoji">📊</span>Jelajah Warna-Warni Data</a>
     <a href="#alam-bentuk" class="map-item"><span class="emoji">🌈</span>Dunia Sudut Ajaib</a>
     <a href="#kerja-sama" class="map-item"><span class="emoji">🔍</span>Detektif Bangun Datar</a>
+    <a href="Jelajah Pengetahuan.html" class="map-item"><span class="emoji">🔍</span>Jelajah Pengetahuan</a>
   </div>
   
   <!-- Suara klik interaktif -->
